--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://troy1eighty2.github.io/mernportfolio",
+  "homepage": "https://troy1eighty2.github.io/",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
