--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:server": "node backend/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
