changes to margins

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -33,5 +33,12 @@
     "date": "2024-09-29",
     "url": "https://github.com/troy1eighty2/mernportfolio",
     "blurb": "is my little corner of the internet."
+  },
+  {
+    "id": 6,
+    "name": "Fatima",
+    "date": "2024-10-27",
+    "url": "https://github.com/troy1eighty2/fatima_website",
+    "blurb": "is a website for a printing service."
   }
 ]
