--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-helmet": "*"
+    "react-helmet": "*",
+    "react-code-blocks": "*",
+    "react-chartjs-2": "*"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
