--- a/src/sanity/package.json
+++ b/src/sanity/package.json
@@ -9,16 +9,17 @@
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
+    "login": "sanity login",
     "deploy-graphql": "sanity graphql deploy"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^4.10.3",
+    "@sanity/vision": "^4.11.0",
     "react": "^19.1",
     "react-dom": "^19.1",
-    "sanity": "^4.10.3",
+    "sanity": "^4.11.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
