--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@sanity/cli": "^4.0.1",
+    "@portabletext/react": "*",
+    "@sanity/image-url": "*",
     "axios": "^1.10.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
